--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,12 +6,13 @@
 
 .wrapper{
 	display: grid;
-	grid-template-columns: 30% 40% 30%;
+	grid-template-columns: 1fr 2fr 2fr;
 	
 	/*grid-column-gap: 1em;
 	grid-row-gap: 1em;*/
 
 	grid-gap: 1em;
+	grid-auto-rows: 100px;
 }
 
 .wrapper > div {
